syntax = "proto3";

import "google/protobuf/empty.proto";
import "types/types.proto";

package bundler;

enum Mode {
    AUTO = 0;
    MANUAL = 1;
}

message SetModeRequest {
    Mode mode = 1;
    uint64 interval = 2; // if the mode is auto, bundle will be sent every interval seconds
}

enum SetModeResult{
    OK = 0;
}

message SetModeResponse{
    SetModeResult res = 1;
}

message SendBundleNowResponse{
    types.H256 res = 1;
}

service Bundler {
    // debug
    rpc SetBundlerMode(SetModeRequest) returns (SetModeResponse);
    rpc SendBundleNow(google.protobuf.Empty) returns (SendBundleNowResponse);
}
